--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="your_image.jpg" alt="Picture" id="downloadImage">
+    <img src="card_image.jpg" alt="Picture" id="downloadImage">
     <input type="text" id="nameInput" placeholder="Write your name">
     <button id="submitButton">Submit</button>
     <a href="#" id="downloadLink" download>Download</a>
